RDCC-5457:Changes made to improve code coverage